# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.

[package]
name = "daemonconfiguration"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
systemctl = "0.1"

[lib]
crate-type = ["cdylib"]
